# TestCelix

./: CMakeLists.txt  conanfile.py  doTheThing-debug.sh  doTheThing-release_debug.sh  doTheThing.sh  readme.md
deploy/TestCelixContainer/: TestCelixContainer
